<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Packing Up</string>
    <string name="action_settings">Settings</string>
    <string name="where_to_travel">Where are you going to travel?</string>
    <string name="button_start">Go</string>
    <string name="title_activity_destiny">Your destiny</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="skip">Skip</string>
    <string name="is_correct">Is that correct?</string>
    <string name="no_destiny">Incorrect destiny!</string>
    <string name="try_again_basic">Try again!</string>
    <string name="try_again_complete">Destiny not found, try again!</string>
    <string name="dont_worry">Don\'t worry, go ahead!</string>
    <string name="speech_description">Image button for speech recognition.</string>
    <string name="title_activity_information">Travel information</string>
    <string name="information_necessary">Please, fill the necessary information:</string>
    <string name="purpose">What\'s the travel purpose?</string>
    <string name="leisure_holidays">Leisure/Holidays</string>
    <string name="work">Work</string>
    <string name="type_persons">Type of persons who travel?</string>
    <string name="view_list">View the list</string>
    <string name="title_activity_list">What you need to take</string>
    <string name="no_results">No results!!</string>
    <string name="error_map">Google maps service unavailable.</string>
    <string name="error">An error occurred.</string>
    <string name="category_documentation">Documentation</string>
    <string name="category_clothes">Clothes</string>
    <string name="category_dressing_case">Dressing case</string>
    <string name="category_media">Media</string>
    <string name="category_beach">Beach</string>
    <string name="category_mount">Mount</string>
    <string name="category_work">Work</string>
    <string name="category_kit">Kit</string>
    <string name="category_others">Others</string>
    <string name="gender_women">Women</string>
    <string name="gender_men">Men</string>
    <string name="gender_children">Children</string>
    <string name="gender_all">All</string>
    <string name="remove">Do you want to remove it definitely?</string>
    <string name="no_passengers">Without adult passengers?</string>
    <string name="action_addNew">Add new</string>
    <string name="add_new_item">New item</string>
    <string name="add">Add</string>
    <string name="choose_category">Choose the category</string>
    <string name="new_item_text">Item name:</string>
    <string name="choose_gender">Choose the gender</string>
    <string name="exists">There is already an item with that name!</string>
    <string name="remove_item">Remove item</string>
    <string name="congratulations">Congratulations!</string>
    <string name="end_message">You have completed the case, you can go peaceful!</string>
    <string name="acept">Acept</string>
    <string name="no_purpose">Select a purpose for the travel!</string>
    <string name="name_empty">The field name is empty!</string>
    <string name="error_message">An error has occurred. Please report it.</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="continue_text">Continue</string>
    <string name="rate_me">Rate app</string>
    <string name="email_subject">Packing Up feedback</string>
    <string name="email_body">[Comment what you want]</string>
    <string name="email_title">Error report</string>
    <string name="instructions">Tips</string>
    <string name="test">This is a test</string>
    <string name="instruction_delete">You can delete an item, if you think you would never carry it:</string>
    <string name="instruction_add_new">Also, you can add new items, if missing any:</string>
    <string name="instruction_select">To select an item, just click over it:</string>
    <string name="error_market">Unable to find Google Play market</string>
	<string name="share">Share</string>
	<string name="share_message">In case you are going to travel!</string>
	<string name="cancel_trip">Cancel Trip</string>
	<string name="travel_to">Travel to</string>
	<string name="finalize">Close suitcase</string>
	<string name="are_sure">Are you sure?</string>
	<string name="lose_data">If you continue, you are going to lose all items marked.</string>
	<string name="cancel_info">You can cancel de trip in the options menu</string>
	
    <string-array name="categories">
        <item>@string/category_documentation</item>
        <item>@string/category_clothes</item>
        <item>@string/category_dressing_case</item>
        <item>@string/category_media</item>
        <item>@string/category_mount</item>
        <item>@string/category_beach</item>
        <item>@string/category_work</item>
        <item>@string/category_kit</item>
        <item>@string/category_others</item>
    </string-array>
    <string-array name="genders">
        <item>@string/gender_women</item>
        <item>@string/gender_men</item>
        <item>@string/gender_children</item>
        <item>@string/gender_all</item>
    </string-array>

</resources>