<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="packingup.core.activities.ExpandableListActivity" >

    <item
        android:id="@+id/action_addNew"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_addNew"/>
    <item
        android:id="@+id/action_rate_me"
        android:icon="@drawable/star"
        android:orderInCategory="100"
        android:title="@string/rate_me"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/feedback"
        android:orderInCategory="100"
        android:title="@string/email_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_instructions"
        android:icon="@drawable/instructions"
        android:orderInCategory="100"
        android:title="@string/instructions"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cancel_trip"
        android:icon="@drawable/trash"
        android:orderInCategory="100"
        android:title="@string/cancel_trip"
        app:showAsAction="never"/>

</menu>