<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ads"
    android:orientation="vertical"
    tools:context="packingup.core.activities.InformationActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/information_necessary"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerInParent="true"
        android:layout_marginTop="21dp"
        android:text="@string/purpose"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:text="@string/type_persons"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerInParent="true"
        android:layout_marginTop="6dp" >

        <RadioButton
            android:id="@+id/radio1"
            style="@style/CustomRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leisure_holidays" />

        <RadioButton
            android:id="@+id/radio2"
            style="@style/CustomRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox3"
        android:layout_below="@+id/textView3"
        android:button="@drawable/custom_checkbox"
        android:text="@string/gender_women" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:button="@drawable/custom_checkbox"
        android:text="@string/gender_men" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"
        android:layout_centerHorizontal="true"
        android:button="@drawable/custom_checkbox"
        android:text="@string/gender_children" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/custom_button"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/view_list" />

    <LinearLayout
        android:id="@+id/adsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >
    </LinearLayout>

</RelativeLayout>