<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="packingup.core.activities.MainActivity" >

    <item
        android:id="@+id/action_rate_me"
        android:icon="@drawable/star"
        android:orderInCategory="100"
        android:title="@string/rate_me"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/feedback"
        android:orderInCategory="100"
        android:title="@string/email_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>

</menu>